[package]
name = "ds"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"
build = "build.rs"

[dependencies]
# Subcommands
cmd-config = { path = "./commands/cmd-config" }
cmd-ping = { path = "./commands/cmd-ping" }
cmd-shell = { path = "./commands/cmd-shell" }

# Workspace Deps
ds-command = { path = "./packages/ds-command" }
ds-config = { path = "./packages/ds-config" }

# Actual Deps
anyhow = "1.0.24"
structopt = "0.3.5"
async-trait = "0.1.19"
async-std = { version = "1.2.0", features = ["attributes"] }
clap = "2.33.0"


[workspace]
members = [".", "packages/*", "commands/*"]
default-members = [".", "packages/*", "commands/*"]

[build-dependencies]
anyhow = "1.0.24"
