[package]
name = "cmd-config"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ds-command = { path = "../../packages/ds-command" }
ds-config = { path = "../../packages/ds-config" }
structopt = "0.3.5"
anyhow = "1.0.24"
