[package]
name = "cmd-hello"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ds-config = { path = "../../packages/ds-config" }
ds-command = { path = "../../packages/ds-command" }
structopt = "0.3.5"
anyhow = "1.0.24"
lazy_static = "1.4.0"
config = "0.9.3"
serde = { version = "1.0.103", features = ["derive"] }
async-trait = "0.1.19"
