[package]
name = "cmd-ping"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ds-command = { path = "../../packages/ds-command" }

surf = "1.0.3"
anyhow = "1.0.25"
structopt = "0.3.5"
url = "2.1.0"
async-trait = "0.1.19"
