[package]
name = "cmd-shell"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ds-command = { path = "../../packages/ds-command" }
ds-error-context = { path = "../../packages/ds-error-context" }

anyhow = "1.0.25"
structopt = "0.3.5"
async-trait = "0.1.19"
directories = "2.0.2"
ssri = "5.0.0"
