[package]
name = "cmd-config"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dstopic-command = { path = "../../packages/dstopic-command" }
structopt = "0.3.5"
anyhow = "1.0.24"
